[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/LevelSelectMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/SettingsMenu.tscn" type="PackedScene" id=3]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
pause_mode = 2
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 740.0

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
pause_mode = 2
margin_right = 89.0
margin_bottom = 720.0
size_flags_horizontal = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="MarginContainer/HBoxContainer/Buttons"]
pause_mode = 2
margin_top = 290.0
margin_right = 64.0
margin_bottom = 310.0
size_flags_horizontal = 0
text = "Resume"

[node name="Restart" type="Button" parent="MarginContainer/HBoxContainer/Buttons"]
pause_mode = 2
margin_top = 320.0
margin_right = 57.0
margin_bottom = 340.0
size_flags_horizontal = 0
text = "Restart"

[node name="LevelSelect" type="Button" parent="MarginContainer/HBoxContainer/Buttons"]
pause_mode = 2
margin_top = 350.0
margin_right = 89.0
margin_bottom = 370.0
size_flags_horizontal = 0
text = "Level Select"
align = 0

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/Buttons"]
pause_mode = 2
margin_top = 380.0
margin_right = 63.0
margin_bottom = 400.0
size_flags_horizontal = 0
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/Buttons"]
pause_mode = 2
margin_top = 410.0
margin_right = 40.0
margin_bottom = 430.0
size_flags_horizontal = 0
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
pause_mode = 2
margin_left = 622.0
margin_right = 1240.0
margin_bottom = 720.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectMenu" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
pause_mode = 2
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 248.0
margin_right = 618.0
margin_bottom = 316.0

[node name="SettingsMenu" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 284.0
margin_bottom = 436.0
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="level_selected" from="MarginContainer/HBoxContainer/VBoxContainer/LevelSelectMenu" to="." method="_on_LevelSelectMenu_level_selected"]
